<resources>
    <string name="app_name">pedulipangan</string>
    <string name="title_home">Home</string>
    <string name="title_stock">Stock</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">login_Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="product_categories">
        <item>Apel</item>
        <item>Beras</item>
        <item>Brokoli</item>
        <item>Cabai</item>
        <item>Jagung</item>
        <item>Jamur</item>
        <item>Jeruk</item>
        <item>Kentang</item>
        <item>Kubis</item>
        <item>Mangga</item>
        <item>Mie Instan</item>
        <item>Sawi</item>
        <item>Selada</item>
        <item>Susu</item>
        <item>Tomat</item>
        <item>Wortel</item>
    </string-array>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>