<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_stock"
        android:icon="@drawable/stock"
        android:title="@string/title_stock" />
    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/statistics"
        android:title="@string/title_statistics" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/notification"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />

</menu>